--- a/LogicalProgrammingInCsharp/LogicalProgrammingInCsharp.csproj
+++ b/LogicalProgrammingInCsharp/LogicalProgrammingInCsharp.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calculator.cs" />
+    <Compile Include="CouponNumber.cs" />
+    <Compile Include="FibonocciSeries.cs" />
+    <Compile Include="PerfectNumber.cs" />
+    <Compile Include="PrimeNumber.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReverseNumber.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
